<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linalgs.practica12.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/formulario"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loggin"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/eLoggin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/loggin"
                android:inputType="textPersonName"
                android:textColor="@color/greenyellow"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/pPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/greenyellow"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rpassword"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/pRPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/rpassword"
                android:inputType="textPassword"
                android:textColor="@color/greenyellow"
                android:textSize="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:textColor="@color/greenyellow"
                android:textSize="20sp"/>
        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino"/>
            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fechan"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <DatePicker
                android:id="@+id/simpleDataPicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:datePickerMode="spinner"></DatePicker>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lnacimiento"
                android:textColor="@color/black"
                android:textSize="20sp"/>
            <Spinner
                android:id="@+id/sCiudades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobbies"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cine"
                android:id="@+id/cCine"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dormir"
                android:id="@+id/cDormir"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comer"
                android:id="@+id/cComer"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bailar"
                android:id="@+id/cBailar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/bAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellowgreen"
                android:onClick="Aceptar"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="30sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/green"
            android:textSize="25sp"
            />
    </LinearLayout>

</ScrollView>
